# finders

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  cli-reference.html  colour-config.html  contributing.html  history.json  installation.html  intro.html  justfile  output-modes.html  print.html  quick-start.html  searcher-c2a407aa.js  searchindex-072a11f1.js  toc-22fd0f9f.js  toc.html
.github/: CODEOWNERS  pull_request_template.md
.github/scripts/: generate_benchmark_report.py
.github/templates/: benchmark_report.css  benchmark_report.html
.github/workflows/: auto-tag.yml  benchmark.yml  ci.yml  comparison.yml  docs.yml  main.yml  pr.yml  release.yml  security.yml  update-coverage-badge.yml
benches/: benchmarks.rs  comparison_benchmarks.rs  profile_search.rs  search_benchmarks.rs
benches/fixtures/: generator.rs
benchmarks/: history.json  index.html
docs/: book.toml  interface-v3.0.0.md  justfile-guide.md  parallel-implementation-explained.md  parallel-performance-results.md  performance-analysis.md  profiling-results-batched.md  profiling-results.md  project-structure-review.md
docs/adr/: 0001-comparison-benchmark-architecture.md  0002-output-abstraction-and-v3-breaking-changes.md  0003-github-pages-deployment-strategy.md  0004-benchmark-report-generation-with-historical-trends.md  0005-anyhow-error-handling.md  0006-parallel-file-processing-with-rayon.md  0007-batched-output-writes.md  README.md  template.md
docs/src/: SUMMARY.md  cli-reference.md  colour-config.md  contributing.md  installation.md  intro.md  output-modes.md  quick-start.md
examples/: advanced-patterns.html  common-use-cases.html  integration.html
reference/: comparison.html  performance.html  troubleshooting.html
scripts/: release.sh
src/: lib.rs  searcher.rs
src/file_finder/: mod.rs  (+1 more)
tests/: anyhow_error_tests.rs  cli_integration_tests.rs  error_handling_tests.rs
(+271 files in other folders)
