[package]
name = "finders"
version = "2.1.2"
edition = "2024"
authors = ["Youcef Kadri <youcef.d.kadri@gmail.com>"]
readme = "README.md"
license-file = "LICENSE"
description = " A tool to shortcut the find command"
repository = "https://github.com/ydkadri/finders"
categories = ["command-line-utilities"]
exclude = [
    ".github/",
    ".gitignore"
]

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
regex = "1.8.3"
walkdir = "2.5.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "search_benchmarks"
harness = false
