[package]
name = "finders"
version = "3.0.2"
edition = "2024"
authors = ["Youcef Kadri <youcef.d.kadri@gmail.com>"]
readme = "README.md"
license-file = "LICENSE"
description = " A tool to shortcut the find command"
repository = "https://github.com/ydkadri/finders"
categories = ["command-line-utilities"]
exclude = [
    ".github/",
    ".gitignore"
]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.3", features = ["derive"] }
regex = "1.8.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
termcolor = "1.4"
walkdir = "2.5.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "search_benchmarks"
harness = false

[[bench]]
name = "comparison_benchmarks"
harness = false
